--- a/frontend/style/list.css
+++ b/frontend/style/list.css
@@ -31,7 +31,7 @@ h1{
     margin-bottom: 30px;
   }
   
-  #list-container div::before {
+  /* #list-container div::before {
     content: '';
     position: absolute;
     top: 0;
@@ -45,7 +45,7 @@ h1{
   
   #list-container div:hover::before {
     opacity: 0.5;
-  }
+  } */
   
   #list-container div img {
     width: 100%;
@@ -74,3 +74,18 @@ h1{
     }
   }
   
+
+  #list-container>div>button{
+    /* margin: 5px; */
+    text-align: left;
+    padding: 7px;
+    background-color: teal;
+    font-size: 15px;
+    border: none;
+    border-radius: 5px;
+    color: white;
+  }
+  #list-container>div>button:hover{
+    background-color: teal;
+    border-radius: 20px;
+  }
